--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,4 +28,11 @@
         android:layout_margin="10dp"
         android:text="@string/enter_designing_views_button_text" />
 
+    <Button
+        android:id="@+id/bEnterAdapterViews"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="@string/enter_adapter_view_button_text" />
+
 </LinearLayout>
