--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,5 +19,39 @@
         <item name="android:clickable">true</item>
     </style>
 
+    <style name="LargeRedFont">
+        <item name="android:textColor">#C80000</item>
+        <item name="android:textSize">40sp</item>
+    </style>
+
+    <!-- Inherit styles you created with . operator-->
+    <style name="LargeFont">
+        <item name="android:textSize">40sp</item>
+    </style>
+    <style name="LargeFont.Red">
+        <item name="android:textColor">#C80000</item>
+    </style>
+
+    <!-- Inherit any style with parent attribute-->
+    <style name="LargeBlueFont" parent="@style/LargeFont">
+        <item name="android:textColor">#00007f</item>
+    </style>
+
+    <!-- This is the generated app theme -->
+    <style name="AppThemeCustom" parent="AppTheme">
+        <!-- These are your custom properties -->
+        <item name="android:buttonStyle">@style/Widget.Button.Custom</item>
+        <item name="android:textViewStyle">@style/Widget.TextView.Custom</item>
+    </style>
+
+    <!-- This is the custom button styles for this application -->
+    <style name="Widget.Button.Custom" parent="android:Widget.Button">
+        <item name="android:textColor">#0000FF</item>
+    </style>
+
+    <!-- This is the custom textview styles for this application -->
+    <style name="Widget.TextView.Custom" parent="android:Widget.TextView">
+        <item name="android:textColor">#00FF00</item>
+    </style>
 
 </resources>
