-Added a Custom View that has Custom Font by extending TextView

--- a/app/src/main/res/layout/activity_custom_font.xml
+++ b/app/src/main/res/layout/activity_custom_font.xml
@@ -14,7 +14,7 @@
         android:layout_margin="10dp"
         android:text="@string/custom_font_text_view_text" />
 
-    <TextView
+    <com.example.kevinlay.androidfundamentalspractice.DesigningAndStylingViews.CustomFont.CustomFontCustomView
         android:id="@+id/tvCustomFontCustomView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
