-Added code for handling TextStyle with the Custom Font Custom View

--- a/app/src/main/res/layout/activity_custom_font.xml
+++ b/app/src/main/res/layout/activity_custom_font.xml
@@ -19,5 +19,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:textStyle="italic"
         android:text="@string/custom_font_custom_view_text" />
 </LinearLayout>
