--- a/app/src/main/res/layout/activity_binding.xml
+++ b/app/src/main/res/layout/activity_binding.xml
@@ -31,5 +31,10 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             bind:imageUri="@{handler.url}"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Click me"
+            android:onClick="@{user::clickForNameToast}"/>
     </LinearLayout>
 </layout>
