-Added Ternary Operator with Data Binding example and documentation

--- a/app/src/main/res/layout/activity_binding.xml
+++ b/app/src/main/res/layout/activity_binding.xml
@@ -40,6 +40,11 @@
             android:text="Click me Listener Binding"
             android:onClick="@{(view) -> user.clickForNameToastListenerBinding(view, user)}"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{user.isUser ? user.registerYes : user.registerNo }"/>
+
         <include layout="@layout/layout_binding_example"
             bind:user2="@{user}"/>
     </LinearLayout>
