--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,4 +61,10 @@
         android:layout_height="wrap_content"
         android:text="@string/enter_data_binding_activity_button_text" />
 
+    <Button
+        android:id="@+id/bEnterDagger"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/enter_dagger_activity_button_text" />
+
 </LinearLayout>
