--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,4 +67,10 @@
         android:layout_height="wrap_content"
         android:text="@string/enter_dagger_activity_button_text" />
 
+    <Button
+        android:id="@+id/bEnterKotlin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/enter_kotlin_activity_button_text" />
+
 </LinearLayout>
